er section safari fixes 3

--- a/styles.css
+++ b/styles.css
@@ -1876,7 +1876,7 @@ HOME EXTENSION STYLES
     gap: 1rem;
     width: 100%;
     max-width: 100%;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .er-row-one-right-img-container{
